--- a/src/epub/text/preface.xhtml
+++ b/src/epub/text/preface.xhtml
@@ -1,10 +1,22 @@
-<h2>Preface</h2>
-<p>In my experience I found that the most effective way to express something in order to make others understand is to use the simplest language. Also I learned from teaching that the more rigid the language the less effective it is. People do not respond to very stern and rigid language especially when we try to teach something which normally people don't engage in during their daily life. Meditation appears to them as something that they cannot always do. As more people turn to meditation, they need more simplified instructions so they can practice by themselves without a teacher around. This book is the result of requests made by many meditators who need a very simple book written in ordinary colloquial language.</p>
-<p>In preparing this book I have been helped by many of my friends. I am deeply grateful to all of them. Especially I would like to express my deepest appreciation and sincere gratitude to John Patticord, Daniel J. Olmsted, Matthew Flickstein, Carol Flickstein, Patrick Hamilton, Genny Hamilton, Bill Mayne, Bhikkhu Dang Pham Jotika and Bhikkhu Sona for their most valuable suggestions, comments and criticisms of numerous points in preparing this book. Also thanks to Reverend Sister Sama and Chris O'Keefe for their support in production efforts.</p>
-<blockquote>
-  H. Gunaratana Mahathera<br />
-    Bhavana Society<br />
-    Rt. 1 Box 218-3<br />
-    High View, WV 26808<br />
-    December 7, 1990<br />
-</blockquote>
+<?xml version="1.0" encoding="utf-8"?>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" lang="en-US" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: http://standardebooks.org/vocab/1.0" xml:lang="en-US">
+	<head>
+		<title>Preface</title>
+		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
+		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
+	</head>
+	<body epub:type="frontmatter z3998:non-fiction">
+		<section id="preface" role="doc-preface" epub:type="preface">
+			<h2 epub:type="title">Preface</h2>
+			<p>In my experience I found that the most effective way to express something in order to make others understand is to use the simplest language. Also I learned from teaching that the more rigid the language the less effective it is. People do not respond to very stern and rigid language especially when we try to teach something which normally people don't engage in during their daily life. Meditation appears to them as something that they cannot always do. As more people turn to meditation, they need more simplified instructions so they can practice by themselves without a teacher around. This book is the result of requests made by many meditators who need a very simple book written in ordinary colloquial language.</p>
+			<p>In preparing this book I have been helped by many of my friends. I am deeply grateful to all of them. Especially I would like to express my deepest appreciation and sincere gratitude to John Patticord, Daniel J. Olmsted, Matthew Flickstein, Carol Flickstein, Patrick Hamilton, Genny Hamilton, Bill Mayne, Bhikkhu Dang Pham Jotika and Bhikkhu Sona for their most valuable suggestions, comments and criticisms of numerous points in preparing this book. Also thanks to Reverend Sister Sama and Chris O'Keefe for their support in production efforts.</p>
+			<blockquote>
+				H. Gunaratana Mahathera<br />
+					Bhavana Society<br />
+					Rt. 1 Box 218-3<br />
+					High View, WV 26808<br />
+					December 7, 1990<br />
+			</blockquote>
+		</section>
+	</body>
+</html>
