--- a/src/epub/text/copyright.xhtml
+++ b/src/epub/text/copyright.xhtml
@@ -7,44 +7,14 @@
 	</head>
 	<body epub:type="backmatter">
 		<section id="uncopyright" epub:type="copyright-page">
-
 			<h2 epub:type="title">Copyright and Distribution Agreement</h2>
-			<p>
-				DISTRIBUTION AGREEMENT<br />
-				TITLE OF WORK: Mindfulness in Plain English<br />
-				FILENAME: MPE.ZIP<br />
-				AUTHOR: Venerable H. Gunaratana Mahathera<br />
-				PUBLISHER'S ADDRESS:
-			</p>
-			<p>
-				H. Gunaratana Mahathera<br />
-				Bhavana Society<br />
-				Rt. 1 Box 218-3<br />
-				High View, WV 26808
-			</p>
-			<p>
-				DATE OF PUBLICATION: December 7, 1990<br />
-				DATE OF BODHINET RELEASE: April 1994<br />
-				ORIGIN: Tiger Team Buddhist Information Network (510) 268-0102 * <br />
-				BodhiNet (72:1000/658)
-			</p>
-			<p>
-				The publisher retains all rights to this work and hereby grants electronic distribution rights to BodhiNet Democratic Buddhist Network. This work may be freely copied and redistributed, provided that it is accompanied by this Agreement and is distributed at no cost to the recipient. If this work is used by a teacher in a class, or is quoted in a review, the publisher shall be notified of such use. If you find this work of value, please consider sending a donation to the author or publisher, so that these works may continue to be made available.
-			</p>
-			<p>
-				BodhiNet<br />
-				1920 Francisco St.,<br />
-				Suite 112<br />
-				Berkeley, CA 94709<br />
-				510-540-6565<br />
-				510-268-0102 Modem (via Tiger Team)
-			</p>
-			<p>
-				This text is from an early edition of the book provided through Tiger Team and BodhiNet. <a href="http://www.wisdompubs.org/book/mindfulness-plain-english">Wisdom Publications</a> has published an expanded and updated edition that is well worth buying. It remains one of the clearest introductory texts on the practice of meditation and is highly recommended.
-			</p>
-			<p>
-				Purchase <a href="http://www.amazon.com/gp/product/0861719069/ref=as_li_ss_tl?ie=UTF8&amp;camp=1789&amp;creative=390957&amp;creativeASIN=0861719069&amp;linkCode=as2&amp;tag=wwwvipassanacom">Mindfulness in Plain English: 20th Anniversary Edition</a> at Amazon.com
-			</p>
+			<p>DISTRIBUTION AGREEMENT<br/> TITLE OF WORK: Mindfulness in Plain English<br/> FILENAME: MPE.ZIP<br/> AUTHOR: Venerable H. Gunaratana Mahathera<br/> PUBLISHER'S ADDRESS:</p>
+			<p>H. Gunaratana Mahathera<br/> Bhavana Society<br/> Rt. 1 Box 218-3<br/> High View, WV 26808</p>
+			<p>DATE OF PUBLICATION: December 7, 1990<br/> DATE OF BODHINET RELEASE: April 1994<br/> ORIGIN: Tiger Team Buddhist Information Network (510) 268-0102 * <br/> BodhiNet (72:1000/658)</p>
+			<p>The publisher retains all rights to this work and hereby grants electronic distribution rights to BodhiNet Democratic Buddhist Network. This work may be freely copied and redistributed, provided that it is accompanied by this Agreement and is distributed at no cost to the recipient. If this work is used by a teacher in a class, or is quoted in a review, the publisher shall be notified of such use. If you find this work of value, please consider sending a donation to the author or publisher, so that these works may continue to be made available.</p>
+			<p>BodhiNet<br/> 1920 Francisco St.,<br/> Suite 112<br/> Berkeley, CA 94709<br/> 510-540-6565<br/> 510-268-0102 Modem (via Tiger Team)</p>
+			<p>This text is from an early edition of the book provided through Tiger Team and BodhiNet. <a href="http://www.wisdompubs.org/book/mindfulness-plain-english">Wisdom Publications</a> has published an expanded and updated edition that is well worth buying. It remains one of the clearest introductory texts on the practice of meditation and is highly recommended.</p>
+			<p>Purchase <a href="http://www.amazon.com/gp/product/0861719069/ref=as_li_ss_tl?ie=UTF8&amp;camp=1789&amp;creative=390957&amp;creativeASIN=0861719069&amp;linkCode=as2&amp;tag=wwwvipassanacom">Mindfulness in Plain English: 20th Anniversary Edition</a> at Amazon.com</p>
 		</section>
 	</body>
 </html>
