--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -20,10 +20,55 @@
 					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: Meditation: Why Bother?</a>
 				</li>
 				<li>
+					<a href="text/chapter-2.xhtml"><span epub:type="z3998:roman">II</span>: What Meditation Isn’t</a>
+				</li>
+				<li>
+					<a href="text/chapter-3.xhtml"><span epub:type="z3998:roman">III</span>: What Meditation Is</a>
+				</li>
+				<li>
+					<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: Attitude</a>
+				</li>
+				<li>
+					<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: The Practice</a>
+				</li>
+				<li>
+					<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: What to Do with Your Body</a>
+				</li>
+				<li>
+					<a href="text/chapter-7.xhtml"><span epub:type="z3998:roman">VII</span>: What to Do with Your Mind</a>
+				</li>
+				<li>
+					<a href="text/chapter-8.xhtml"><span epub:type="z3998:roman">VIII</span>: Structuring Your Meditation</a>
+				</li>
+				<li>
+					<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: Set Up Exercises</a>
+				</li>
+				<li>
+					<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: Dealing with Problems</a>
+				</li>
+				<li>
+					<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: Dealing with Distractions I</a>
+				</li>
+				<li>
+					<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: Dealing with Distractions II</a>
+				</li>
+				<li>
+					<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: Mindfulness (Sati)</a>
+				</li>
+				<li>
+					<a href="text/chapter-14.xhtml"><span epub:type="z3998:roman">XIV</span>: Mindfulness Versus Concentration</a>
+				</li>
+				<li>
+					<a href="text/chapter-15.xhtml"><span epub:type="z3998:roman">XV</span>: Meditation in Everyday Life</a>
+				</li>
+				<li>
+					<a href="text/chapter-16.xhtml"><span epub:type="z3998:roman">XVI</span>: What’s in It for You</a>
+				</li>
+				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
 				</li>
 				<li>
-					<a href="text/copyright.xhtml">Copyright</a>
+					<a href="text/copyright.xhtml">Copyright &amp; Electronic Distribution Agreement</a>
 				</li>
 			</ol>
 		</nav>
@@ -34,16 +79,13 @@
 					<a href="text/titlepage.xhtml" epub:type="frontmatter titlepage">Titlepage</a>
 				</li>
 				<li>
-					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
-				</li>
-				<li>
 					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:non-fiction">Mindfulness in Plain English</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
 				</li>
 				<li>
-					<a href="text/Copyright.xhtml" epub:type="backmatter copyright-page">Copyright</a>
+					<a href="text/Copyright.xhtml" epub:type="backmatter copyright-page">Copyright &amp; Electronic Distribution Agreement</a>
 				</li>
 			</ol>
 		</nav>
