Slight tweaks to get the epub to build

--- a/src/epub/text/introduction.xhtml
+++ b/src/epub/text/introduction.xhtml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" lang="en-US" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: http://standardebooks.org/vocab/1.0" xml:lang="en-US">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: http://standardebooks.org/vocab/1.0" xml:lang="en-US">
 	<head>
 		<title>Introduction</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="frontmatter z3998:non-fiction">
-		<section id="introduction" role="doc-introduction" epub:type="introduction">
+		<section id="introduction" role="doc-introduction">
 			<h2 epub:type="title">Introduction</h2>
 			<h3>American Buddhism</h3>
 			<p>The subject of this book is Vipassana meditation practice. Repeat, practice. This is a meditation manual, a nuts-and-bolts, step-by-step guide to Insight meditation. It is meant to be practical. It is meant for use. There are already many comprehensive books on Buddhism as a philosophy, and on the theoretical aspects of Buddhist meditation. If you are interested in that material we urge you to read those books. Many of them are excellent. This book is a ‘How to.’ It is written for those who actually want to meditate and especially for those who want to start now. There are very few qualified teachers of the Buddhist style of meditation in the United States of America. It is our intention to give you the basic data you need to get off to a flying start. Only those who follow the instructions given here can say whether we have succeeded or failed. Only those who actually meditate regularly and diligently can judge our effort. No book can possibly cover every problem that a meditator may run into. You will need to meet a qualified teacher eventually. In the meantime, however, these are the basic ground rules; a full understanding of these pages will take you a very long way.</p>
