--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -85,7 +85,7 @@
 					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
 				</li>
 				<li>
-					<a href="text/Copyright.xhtml" epub:type="backmatter copyright-page">Copyright &amp; Electronic Distribution Agreement</a>
+					<a href="text/copyright.xhtml" epub:type="backmatter copyright-page">Copyright &amp; Electronic Distribution Agreement</a>
 				</li>
 			</ol>
 		</nav>
