Imprint. Fix some ordering issues with the backmatter.

--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -9,7 +9,7 @@
 		<section id="colophon" epub:type="colophon">
 			<header>
 				<h2 epub:type="title">Colophon</h2>
-				<img alt="The Standard Ebooks logo" src="../images/logo2.svg" epub:type="z3998:publisher-logo"/>
+				<img alt="The eightfold path of Dharma" src="../images/logo2.svg" epub:type="z3998:publisher-logo"/>
 			</header>
 			<p><i epub:type="se:name.publication.book">Mindfulness in Plain English</i><br/>
 			was published in 1990 by<br/>
