--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -11,6 +11,9 @@
 					<a href="text/titlepage.xhtml">Titlepage</a>
 				</li>
 				<li>
+					<a href="text/imprint.xhtml">Imprint</a>
+				</li>
+				<li>
 					<a href="text/about-the-author.xhtml">About the Author</a>
 				</li>
 				<li>
