Another update to the cover and titlepage art and colophon since the fonts changed

--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -23,15 +23,17 @@
 			<a href="http://www.vipassana.com/meditation/mindfulness_in_plain_english.php">Vipassana.com</a></p>
 
 			<p>The cover page is adapted from a public domain photograph found at<br/>
-			<a href="https://pixnio.com/art/sculptures/statue-lotus-religion-buddha-ceramic-sculpture">Pixnio.com</a>.<br/>
+			<a href="https://publicdomainpictures.net">PublicDomainPictures.net</a>.<br/>
 			The cover and title pages feature the<br/>
-			<b epub:type="se:name.visual-art.typeface">DIN</b><br/>
-			typeface.</p>
+			<b epub:type="se:name.visual-art.typeface">OFL Sorts Mill Goudy</b><br/>
+			and<br/>
+			<b epub:type="se:name.visual-art.typeface">Trajan Pro</b><br/>
+			typefaces.</p>
 
 			<p>The first edition of this ebook was released<br/>
 			<b>March, 2019</b> at<br/>
 			<a href="https://jared.updike.org">Updike.org</a>.</p>
-			<p>If you distribute the ebook, please do so in its entirety, and if you enjoy the work of Bhante Gunaratana, <a href="http://www.amazon.com/gp/product/0861719069/ref=as_li_ss_tl">please support his work</a>.</p>
+			<p>If you distribute this ebook, please do so in its entirety and for free. If you enjoy the work of Bhante Gunaratana, <a href="http://www.amazon.com/gp/product/0861719069/ref=as_li_ss_tl">please support his work</a>.</p>
 		</section>
 	</body>
 </html>
