--- a/src/epub/text/about-the-author.xhtml
+++ b/src/epub/text/about-the-author.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="frontmatter z3998:non-fiction">
-		<section id="about" role="doc-about" epub:type="about">
+		<section id="about" epub:type="chapter">
 			<h2 epub:type="title">About the Author</h2>
 			<p>Venerable Henepola Gunaratana was ordained at the age of 12 as a Buddhist monk at a small temple in Malandeniya Village in Kurunegala District in Sri Lanka. His preceptor was Venerable Kiribatkumbure Sonuttara Mahathera. At the age of 20 he was given higher ordination in Kandy in 1947. He received his education from Vidyalankara College and Buddhist Missionary College in Colombo. Subsequently he traveled to India for five years of missionary work for the Mahabodhi Society, serving the Harijana (Untouchable) people in Sanchi, Delhi, and Bombay. Later he spent ten years as a missionary in Malaysia, serving as religious advisor to the Sasana Abhivurdhiwardhana Society, Buddhist Missionary Society and the Buddhist Youth Federation of Malaysia. He has been a teacher in Kishon Dial School and Temple Road Girls’ School and Principal of the Buddhist Institute of Kuala Lumppur.</p>
 			<p>At the invitation of the Sasana Sevaka Society, Venerable Gunaratana came to the United States in 1968 to serve as <abbr>Hon.</abbr> General Secretary of the Buddhist Vihara Society of Washington, D.C. In 1980 he was appointed President of the Society. During his years at the Vihara, he has taught courses in Buddhism, conducted meditation retreats, and lectured widely throughout the United States, Canada, Europe, Australia and New Zealand.</p>
